# tnt

./: .gitignore  BUILD.md  Makefile  Makefile.am  Makefile.in  README  aclocal.m4  config.cache  config.h  config.h.in  config.h.in~  config.status  configure  configure.ac
.github/workflows/: makefile.yml
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1  traces.2
conf/: Makefile  Makefile.am  Makefile.in  isc.cfg  linux.cfg  netbsd.cfg  solaris.cfg  tnt_setup.de  tnt_setup.de.in  tnt_setup.en  tnt_setup.en.in  tnt_setup.fr  tnt_setup.fr.in
doc/: Makefile  Makefile.am  Makefile.in
doc/solaris/: Makefile  Makefile.in
examples/: Makefile  Makefile.am  Makefile.in  sounds.tnt  tnt.ini.in
examples/sounds/: Makefile  Makefile.in
intl/: Makefile  Makefile.in~
po/: Makefile  Makefile.in  POTFILES  cat-id-tbl.c  tnt.pot
src/: Makefile  Makefile.am  Makefile.in  ax25dump.c  ax25k.c  bcast.c  bcastadd.c  boxlist.c  codconv.c  connect.c  display.c  file.c  huffman.c  iface.c  init.c  keyboard.c  keys.h  log.c  macro.c  main.c  monbox.c  priv.c  remote.c  serial.c  shell.c  tnt  tnt.h  tntc  tntc.c  window.c  window.h  xmon.c  yapp.c
src/runprgs/: Makefile  Makefile.am  Makefile.in  help  info  info.c  logcall  tnt-info
